--- a/css/style.css
+++ b/css/style.css
@@ -8,15 +8,23 @@ body{
 .land-body{
     background-image: url(../img/homePage.jpg);
     background-size: 75%;
-    
 }
 .home-img{
-    position: absolute; 
-    justify: center;
-    top: 30%;
-    right:40%;
-    left:35%;
-    border-radius: 8px;
+    position: relative; 
+    align-items: center;
+    align-self: center;
+    top: 32%;
+    right:73%;
+    left:28%;
+}
+.home-img.buttonImg{
+
+}
+#title-game{
+    color: #cc9900;
+    font-size: 40px;
+    padding: 5px;
+    text-align: center;
 }
 #land{
     color: #cc9900;
@@ -25,7 +33,6 @@ body{
     text-align: center;
 }
 .game{
-    
     background-image: url("../img/background.jpg");
     background-repeat: no-repeat;
     background-position: center;
@@ -38,8 +45,6 @@ body{
     border: solid #cc9900 0.5px;
     box-sizing: border-box;
     border-radius: 15px;
-    /* opacity: 0.7; */
-    /* position: absolute; */
 }
 .ticTac{
     align-content: center;
@@ -56,36 +61,46 @@ body{
     border-radius: 15px;
 }
 #playAgain{
-    width:110px;
-    padding:5px;
-    color:white;
+    width:150px;
+    padding:10px;
+    color:white ;
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
     border:none;
     background-color: #cc9900;
     align-items:flex-end;
-    border-radius: 15px;    
+    border-radius: 15px;
+    overflow: hidden;
+    position: relative;
+    top:20px;
 }
+#playAgain:hover {
+    background-color: #D8D8D8;
+    color:black;
+  }
 footer{
     display: block;
     text-align: center;   
 }
 .btn-new{
-    width:110px;
-    padding:5px;
-    color:white;
+    width:150px;
+    padding:10px;
+    color:white ;
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
     border:none;
     background-color: #cc9900;
     align-items:flex-end;
     border-radius: 15px;
+    overflow: hidden;
+    position: relative;
+    top:20px;
 }
-.btn-hold{
-    width:110px;
-    padding:5px;
-    color:white;
-    border:none;
-    background-color: #cc9900;
-    align-items:flex-end;
-    border-radius: 15px;
-}
+.btn-new:hover {
+    background-color: #D8D8D8;
+    color:black;
+  }
+  
 .x{
     background-color: #D8D8D8;
     opacity: 0.9;
@@ -100,38 +115,10 @@ footer{
     background-repeat: no-repeat;
     background-position: center;
 }
-/* maroon color: #750D37 */
-/* 
-body {
-    text-align: center;
-  }
-  
-  .container {
-    margin-top: 150px;
-  }
-  
-  .zone {
-    width: 100px;
-    height: 100px;
-    border: solid black;
-    margin: 20px;
-    display: inline-block;
-    transition: 0.5s all;
-  }
-  
-  .green {
-    background-color: green;
-  }
-  
-  h2 {
-    display: inline;
-    color: orangered;
-    font-size: 50px;
-    font-family: Helvetica, Arial, sans-serif;
-    letter-spacing: 1px;
-    font-variant: small-caps;
-    padding: 15px;
-    border: 2px double orangered;
-    border-radius: 10px;
-    margin: auto;
-  } */
+.game-background{
+background-image: url("../img/grayBG.jpg")   
+}
+#xoimg{
+    display: flex;
+    justify-content: center;
+}
